RESOLVED FIXED39767
[Qt] RenderThemeQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39767
Summary [Qt] RenderThemeQt.cpp has coding-style errors
Anders Bakken
Reported 2010-05-26 13:30:30 PDT
WebCore/platform/qt/RenderThemeQt.cpp:51: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/RenderThemeQt.cpp:59: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 1 files
Attachments
Patch that fixes the coding style issues (1.20 KB, patch)
2010-05-26 14:37 PDT, Anders Bakken
no flags
Patch (1.25 KB, patch)
2010-06-04 18:48 PDT, Anders Bakken
no flags
Anders Bakken
Comment 1 2010-05-26 14:37:17 PDT
Created attachment 57147 [details] Patch that fixes the coding style issues
Petri Ojala
Comment 2 2010-05-26 21:45:17 PDT
QtTriaged
David Levin
Comment 3 2010-05-27 11:19:37 PDT
Comment on attachment 57147 [details] Patch that fixes the coding style issues > No new tests. (OOPS!) Ditto.
Anders Bakken
Comment 4 2010-06-04 18:48:20 PDT
WebKit Commit Bot
Comment 5 2010-06-05 01:28:33 PDT
Comment on attachment 57942 [details] Patch Clearing flags on attachment: 57942 Committed r60742: <http://trac.webkit.org/changeset/60742>
WebKit Commit Bot
Comment 6 2010-06-05 01:28:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.