third_party/WebKit/WebCore/platform/qt/RenderThemeQt.cpp
@@ -48,16 +48,16 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #endif
 #include "NotImplemented.h"
 #include "Page.h"
-#include "QtStyleOptionWebComboBox.h"
 #include "QWebPageClient.h"
+#include "QtStyleOptionWebComboBox.h"
 #include "RenderBox.h"
 #if ENABLE(PROGRESS_TAG)
 #include "RenderProgress.h"
 #endif
 #include "RenderSlider.h"
 #include "RenderTheme.h"
-#include "TimeRanges.h"
 #include "ScrollbarThemeQt.h"
+#include "TimeRanges.h"
 #include "UserAgentStyleSheets.h"
 #include "qwebpage.h"
 
